# libdart_gir

./: CMakeLists.txt  Makefile.am  aclocal.m4  configure.ac
cmake/: TargetDistclean.cmake  project.cmake
dart/: dart_gir.dart
dart/src/: baseinfo.dart  gir_state.dart  gir_visitor.dart  namespace.dart  object.dart  repository.dart  translator.dart  typelib.dart
po/: POTFILES.in
src/: Makefile.am  dart.vapi  dart_compat.h  dart_gir_core.vala  gir_visitor.vala  gobject-introspection-1.0.vapi  lib.c  libdart_gir-0.1.pc.in  libdart_gir.h  libdart_gir_core.c
test/: Makefile  Makefile.am  Makefile.in  gir_test_suite.c  gir_test_suite.vala  testsuite
test/.deps/: gir_test_suite.Po
